<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentDataPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapsActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/startLocationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/start_Location_Text_View_text" />

        <TextView
            android:id="@+id/endLocationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/end_location_text_view_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/startLocationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hit_start_location_edit_text"
            android:inputType="text|textMultiLine"
            />

        <EditText
            android:id="@+id/endLocationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hit_end_location_edit_text"
            android:inputType="text|textMultiLine"
            />
    </LinearLayout>

    <Button
        android:id="@+id/generateRoadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_road_button_text" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="1dp">
        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hit_start_location_edit_text"
            android:text="@string/distance_text_view_tex" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hit_start_location_edit_text"
            android:text="@string/time_text_view_text" />
    </LinearLayout>
</LinearLayout>